# gorilla-time-series-compression

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
gorillacompression/: __init__.py  decode.py  encode.py  result.py
gorillacompression/timestamps/: constants.py  decode.py  encode.py  result.py
gorillacompression/values/: constants.py  decode.py  encode.py  result.py
notebooks/: figure_2.ipynb  figure_4.ipynb
src/gorillacompression/: decode.py  encode.py
src/gorillacompression/timestamps/: decode.py  encode.py
src/gorillacompression/values/: constants.py  decode.py  encode.py
tests/: test_main.py  tests.py
