[project]
name = "gorillacompression"
version = "1.0.0"
description = "Python implementation of Gorilla time series compression"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ghiles Meddour", email = "ghiles.meddour.b@gmail.com" },
]
dependencies = [
    "bitarray>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "devtools>=0.12.2",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "numpy>=2.0.0",
]

[project.urls]
Repository = "https://github.com/ghilesmeddour/gorilla-time-series-compression"
Documentation = "https://github.com/ghilesmeddour/gorilla-time-series-compression"
Changelog = "https://github.com/ghilesmeddour/gorilla-time-series-compression/blob/main/CHANGELOG.md"
Releases = "https://github.com/ghilesmeddour/gorilla-time-series-compression/releases"

[tool.setuptools]
packages = ["gorillacompression", "gorillacompression.timestamps", "gorillacompression.values"]

[tool.uv]
package = true
required-version = ">=0.6.12"
